# voltiq

.github/workflows/: deploy.yml
voltiq-api/: .env  Cargo.toml
voltiq-api/output/: leads.jsonl
voltiq-api/src/: main.rs
voltiq-web/: next.config.ts  package-lock.json  package.json
voltiq-web/.github/workflows/: deploy.yml
voltiq-web/app/: globals.css  layout.tsx  page.tsx
voltiq-web/app/admin/: page.tsx
voltiq-web/components/: ChatbotShell.tsx
voltiq-web/lib/: demo-data.ts  recommend.ts
